Incorporate bootstrap into template

--- a/charlesnaut/templates/pages/home.html
+++ b/charlesnaut/templates/pages/home.html
@@ -1,10 +1,23 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
     <head>
         <title>Charles Naut</title>
+
+        {% load static %}
+        <link rel="stylesheet" href="{% get_static_prefix %}css/bootstrap-responsive.min.css" type="text/css" />
+        <link rel="stylesheet" href="{% get_static_prefix %}css/bootstrap.min.css" type="text/css" />
+        
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+        <script src="{% get_static_prefix %}js/bootstrap.min.js"></script>
     </head>
 
     <body>
-        Charles Naut's home page coming soon
+        <div class="page-header span12"><h1>Charles Naut</h1></div>
+        
+        <div class="container">
+            <div class="hero-unit span12">
+                <h1>Charles Naut's home page coming soon</h1>
     </body>
 
 </html>
