Include personal image and name in website top banner

--- a/charlesnaut/templates/pages/home.html
+++ b/charlesnaut/templates/pages/home.html
@@ -5,6 +5,7 @@
 
         {% load static %}
         <link rel="stylesheet" href="{% get_static_prefix %}css/bootstrap-responsive.min.css" type="text/css" />
+        <link rel="stylesheet" href="{% get_static_prefix %}css/main.css" type="text/css" />
         <link rel="stylesheet" href="{% get_static_prefix %}css/bootstrap.min.css" type="text/css" />
         
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,7 +14,8 @@
     </head>
 
     <body>
-        <div class="page-header span12"><h1>Charles Naut</h1></div>
+        <div id="banner" class="span12"><h1 id="banner-name">Charles Naut</h1></div>
+    
         
         <div class="container">
             <div class="hero-unit span12">
