--- a/charlesnaut/templates/pages/home.html
+++ b/charlesnaut/templates/pages/home.html
@@ -14,12 +14,24 @@
     </head>
 
     <body>
-        <div id="banner" class="span12"><h1 id="banner-name">Charles Naut</h1></div>
+        <div id="banner" class="span12">
+            <div id="info-pane">
+                <span id="bio">I'm a recent Stanford CS grad working as Program Manager for Microsoft's Bing search engine.</span>
+                <h1 id="banner-name">Charles Naut</h1>
+            </div>
+       </div>
     
         
         <div class="container">
             <div class="hero-unit span12">
-                <h1>Charles Naut's home page coming soon</h1>
+                <div>Projects</div>
+                <div>Resume</div>
+                <div>Papers</div>
+                <div>Twitter</div>
+                <div>Blog</div>
+                <div>Linkedin</div>
+            </div>
+        </div>
     </body>
 
 </html>
