--- a/charlesnaut/templates/pages/home.html
+++ b/charlesnaut/templates/pages/home.html
@@ -16,20 +16,22 @@
     <body>
         <div id="banner" class="span12">
             <div id="info-pane">
-                <span id="bio">I'm a recent Stanford CS grad working as Program Manager for Microsoft's Bing search engine.</span>
+                <span id="bio">I'm a recent Stanford CS grad working as a Program Manager for Microsoft's Bing search engine.</span>
                 <h1 id="banner-name">Charles Naut</h1>
             </div>
        </div>
     
         
         <div class="container">
-            <div class="hero-unit span12">
-                <div>Projects</div>
-                <div>Resume</div>
-                <div>Papers</div>
-                <div>Twitter</div>
-                <div>Blog</div>
-                <div>Linkedin</div>
+            <div class="row">
+                <div class="span4 page-box">Projects</div>
+                <div class="span4 page-box">Resume</div>
+                <div class="span4 page-box">Papers</div>
+            </div>
+            <div class="row">
+                <div class="span4 page-box">Twitter</div>
+                <div class="span4 page-box">Blog</div>
+                <div class="span4 page-box">Linkedin</div>
             </div>
         </div>
     </body>
