--- a/charlesnaut/pages/static/css/main.css
+++ b/charlesnaut/pages/static/css/main.css
@@ -13,6 +13,11 @@ body {
     font-family: "Segoe UI", Candara, "Bitstream Vera Sans", "DejaVu Sans", "Bitstream Vera Sans", "Trebuchet MS", Verdana, "Verdana Ref", sans-serif
 }
 
+#banner:hover {
+    color: black;
+    background-color: white;
+}
+
 #info-pane {
     float: right;
 }
@@ -48,4 +53,10 @@ body {
     font-size: 30px;
     color: white;
     background-color: black;
+}
+
+.page-box:hover {
+    color: black;
+    background-color: white;
+    border-color: white;
 }
