Add links to social sites on home page

--- a/charlesnaut/templates/pages/home.html
+++ b/charlesnaut/templates/pages/home.html
@@ -23,15 +23,15 @@
     
         
         <div class="container">
-            <div class="row">
+            <div class="row" id="first-row">
                 <div class="span4 page-box">Projects</div>
                 <div class="span4 page-box">Resume</div>
                 <div class="span4 page-box">Papers</div>
             </div>
             <div class="row">
-                <div class="span4 page-box">Twitter</div>
-                <div class="span4 page-box">Blog</div>
-                <div class="span4 page-box">Linkedin</div>
+                <div class="span4 page-box"><a href="http://twitter.com/cnaut">Twitter</a></div>
+                <div class="span4 page-box"><a href="http://blog.charlesnaut.com">Blog</a></div>
+                <div class="span4 page-box"><a href="http://linkedin.com/in/charlesnaut">Linkedin</a></div>
             </div>
         </div>
     </body>
