--- a/charlesnaut/templates/pages/home.html
+++ b/charlesnaut/templates/pages/home.html
@@ -24,7 +24,7 @@
         
         <div class="container">
             <div class="row" id="first-row">
-                <div class="span4 page-box">Projects</div>
+                <div class="span4 page-box"><a href="projects">Projects</a></div>
                 <div class="span4 page-box">Resume</div>
                 <div class="span4 page-box">Papers</div>
             </div>
