Enclose title's of boxes in span so that the anchor tag can cover the whole div and the span can be shifted down

--- a/charlesnaut/templates/pages/home.html
+++ b/charlesnaut/templates/pages/home.html
@@ -24,14 +24,14 @@
         
         <div class="container">
             <div class="row" id="first-row">
-                <div class="span4 page-box"><a href="projects">Projects</a></div>
-                <div class="span4 page-box">Resume</div>
-                <div class="span4 page-box">Papers</div>
+                <div class="span4 page-box"><a href="projects"><span class="page-title">Projects</span></a></div>
+                <div class="span4 page-box"><span class="page-title">Resume</span></div>
+                <div class="span4 page-box"><span class="page-title">Papers</span></div>
             </div>
             <div class="row">
-                <div class="span4 page-box"><a href="http://twitter.com/cnaut">Twitter</a></div>
-                <div class="span4 page-box"><a href="http://blog.charlesnaut.com">Blog</a></div>
-                <div class="span4 page-box"><a href="http://linkedin.com/in/charlesnaut">Linkedin</a></div>
+                <div class="span4 page-box"><a href="http://twitter.com/cnaut"><span class="page-title">Twitter</span></a></div>
+                <div class="span4 page-box"><a href="http://blog.charlesnaut.com"><span class="page-title">Blog</span></a></div>
+                <div class="span4 page-box"><a href="http://linkedin.com/in/charlesnaut"><span class="page-title">Linkedin</span></a></div>
             </div>
         </div>
     </body>
