--- a/charlesnaut/pages/static/css/main.css
+++ b/charlesnaut/pages/static/css/main.css
@@ -41,14 +41,13 @@ body {
 }
 
 .page-box {
-    height: 100px;
+    height: 125px;
     
     text-align: center;
     margin-left: -5px;
     margin-right: -5px;
     margin-top: 10px;
     margin-bottom: 5px;
-    padding-top: 45px;
     line-height: 50px;
     
     border-style: solid;
@@ -75,4 +74,9 @@ body {
 
 .page-box:hover a {
     color: black;
+}
+
+.page-title {
+    position: absolute;
+    padding-top: 35px;
 }
