--- a/charlesnaut/templates/pages/home.html
+++ b/charlesnaut/templates/pages/home.html
@@ -10,7 +10,9 @@
         
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <script src="{% get_static_prefix %}js/bootstrap.min.js"></script>
+        <script src="http://ajax.aspnetcdn.com/ajax/jquery/jquery-1.8.0.min.js" type="text/javascript"></script>
+        <script src="{% get_static_prefix %}js/bootstrap.min.js" type="text/javascript"></script>
+        <script src="{% get_static_prefix %}js/main.js" type="text/javascript"></script>
     </head>
 
     <body>
@@ -22,10 +24,10 @@
        </div>
     
         
-        <div class="container">
+        <div id="container" class="container">
             <div class="row" id="first-row">
                 <div class="span4 page-box"><a href="projects"><span class="page-title">Projects</span></a></div>
-                <div class="span4 page-box"><span class="page-title">Resume</span></div>
+                <div class="span4 page-box" onclick="shiftBoxes()"><span class="page-title">Resume</span></div>
                 <div class="span4 page-box"><span class="page-title">Papers</span></div>
             </div>
             <div class="row">
