--- a/charlesnaut/templates/pages/home.html
+++ b/charlesnaut/templates/pages/home.html
@@ -10,7 +10,8 @@
         
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <script src="http://ajax.aspnetcdn.com/ajax/jquery/jquery-1.8.0.min.js" type="text/javascript"></script>
+        <!-- <script src="http://ajax.aspnetcdn.com/ajax/jquery/jquery-1.8.0.min.js" type="text/javascript"></script> --!>
+        <script src="{% get_static_prefix %}js/jquery-1.8.3.min.js" type="text/javascript"></script>
         <script src="{% get_static_prefix %}js/bootstrap.min.js" type="text/javascript"></script>
         <script src="{% get_static_prefix %}js/main.js" type="text/javascript"></script>
     </head>
