--- a/charlesnaut/pages/static/css/main.css
+++ b/charlesnaut/pages/static/css/main.css
@@ -1,6 +1,3 @@
-body {
-}
-
 #banner {
     margin: 0;
     margin: 0;
@@ -79,4 +76,8 @@ body {
 .page-title {
     position: absolute;
     padding-top: 35px;
+}
+
+.hidden-page {
+    display: none;
 }
