--- a/charlesnaut/templates/pages/home.html
+++ b/charlesnaut/templates/pages/home.html
@@ -26,17 +26,28 @@
     
         
         <div id="container" class="container">
-            <div class="row" id="first-row">
-                <div class="span4 page-box"><a href="projects"><span class="page-title">Projects</span></a></div>
-                <div class="span4 page-box" onclick="shiftBoxes()"><span class="page-title">Resume</span></div>
-                <div class="span4 page-box"><span class="page-title">Papers</span></div>
-            </div>
-            <div class="row">
-                <div class="span4 page-box"><a href="http://twitter.com/cnaut"><span class="page-title">Twitter</span></a></div>
-                <div class="span4 page-box"><a href="http://blog.charlesnaut.com"><span class="page-title">Blog</span></a></div>
-                <div class="span4 page-box"><a href="http://linkedin.com/in/charlesnaut"><span class="page-title">Linkedin</span></a></div>
+            <div>
+                <div id="page-boxes">
+                    <div class="row" id="first-row">
+                        <div class="span4 page-box"><a href="projects"><span class="page-title">Projects</span></a></div>
+                        <div class="span4 page-box"><span class="page-title">Resume</span></div>
+                        <div class="span4 page-box" id="papers-box" onclick="shiftBoxes(); showPage('papers');"><span class="page-title">Papers</span></div>
+                    </div>
+                    <div class="row">
+                        <div class="span4 page-box"><a href="http://twitter.com/cnaut"><span class="page-title">Twitter</span></a></div>
+                        <div class="span4 page-box"><a href="http://blog.charlesnaut.com"><span class="page-title">Blog</span></a></div>
+                        <div class="span4 page-box"><a href="http://linkedin.com/in/charlesnaut"><span class="page-title">Linkedin</span></a></div>
+                    </div>
+                </div>
+                <div class="span9">
+                    <div class="hidden-page" id="papers">
+                        <h3>I wrote this</h3>
+                    </div>
+                </div>
             </div>
         </div>
+
+        
     </body>
 
 </html>
