--- a/charlesnaut/templates/pages/home2.html
+++ b/charlesnaut/templates/pages/home2.html
@@ -36,10 +36,10 @@
                     <div class="menu-item">Linkedin</div>
                 </div>
                 <div class="span10" id="main-intro">
-                    Hey! I'm a recent Stanford CS grad working as a Program Manager for Microsoft's Bing search engine. 
-                    <br />
-                    <br />
-                    I like...
+                    <p>Hey! I'm a recent Stanford CS grad working as a Program Manager for Microsoft's Bing search engine.</p> 
+                    <p class="main-details">My <b>passions</b> include technology, social change, and entrepreneurship.</p>
+                    <p class="main-details">My <b>loves</b> include my family, my friends, New York, Stanford, baby back ribs, sports, video games, and movies.</p>
+                    <p class="main-details">My <b>interests</b> include programming, cloud computing, business, artificial intelligence,  
                 </div>
             </div>
         </div>
