--- a/charlesnaut/templates/pages/home2.html
+++ b/charlesnaut/templates/pages/home2.html
@@ -28,18 +28,22 @@
         <div id="container" class="container-fluid">
             <div class="row-fluid">
                 <div class="span2" id="side-bar">
-                    <div class="menu-item">Projects</div>
+                    <div class="menu-item" onclick="transitionPage('project-page')">Projects</div>
                     <div class="menu-item">Resume</div>
                     <div class="menu-item">Papers</div>
                     <div class="menu-item">Twitter</div>
                     <div class="menu-item">Blog</div>
                     <div class="menu-item">Linkedin</div>
                 </div>
-                <div class="span10" id="main-intro">
+                <div class="span10 page current-page" id="main-intro">
                     <p>Hey! I'm a recent Stanford CS grad working as a Program Manager for Microsoft's Bing search engine.</p> 
                     <p class="main-details">My <b>passions</b> include technology, social change, and entrepreneurship.</p>
                     <p class="main-details">My <b>loves</b> include my family, my friends, New York, Stanford, baby back ribs, sports, video games, and movies.</p>
                     <p class="main-details">My <b>interests</b> include programming, cloud computing, business, artificial intelligence,  
+                </div>
+
+                <div class="span10 page hidden-page" id="project-page">
+                    <p>These are my projects</p>
                 </div>
             </div>
         </div>
