--- a/charlesnaut/pages/static/css/main2.css
+++ b/charlesnaut/pages/static/css/main2.css
@@ -14,7 +14,7 @@
     color: white;
 }
 
-#main-intro {
+.page {
     padding: 25px;
     font-size: 40px;
     line-height: 40px;
@@ -28,3 +28,6 @@
     font-size: 30px;
 }
 
+div.hidden-page {
+    display: none !important;
+}
