--- a/charlesnaut/pages/static/css/main2.css
+++ b/charlesnaut/pages/static/css/main2.css
@@ -18,6 +18,9 @@
     color: #333;
 }
 
+.menu-item:hover a {
+    color: white;
+}
 .menu-item a:hover {
     color: white;
     text-decoration: none;
