--- a/charlesnaut/templates/pages/home2.html
+++ b/charlesnaut/templates/pages/home2.html
@@ -40,11 +40,39 @@
                     <p id="main-intro">Hey! I'm a recent Stanford CS grad working as a Program Manager for Microsoft's Bing search engine.</p> 
                     <p class="main-details">My <b>passions</b> include technology, social change, and entrepreneurship.</p>
                     <p class="main-details">My <b>loves</b> include my family, my friends, New York, Stanford, baby back ribs, data, sports, video games, and movies.</p>
-                    <p class="main-details">My <b>interests</b> include programming, business, artificial intelligence, social media, and quantified self.  
+                    <p class="main-details">My <b>interests</b> include programming, business models, artificial intelligence, the developing world, social media, and quantified self.  
                 </div>
 
                 <div class="span10 page hidden-page" id="project-page">
                     <p>These are my projects</p>
+
+                    <div>
+                        <a href="http://considerateapp.com">Considerate App</a>
+                    </div>
+
+                    <div>
+                        <a href="http://ksoundsgood.com">k. sounds good.</a>
+                    </div>
+
+                    <div>
+                        Ideas for a better internet: Moby Dick Project
+                    </div>
+
+                    <div>
+                        <a href="http://dodgebook.com">dodgebook</a>
+                    </div>
+
+                    <div>
+                        Instant Input
+                    </div>
+
+                    <div>
+                        Face AIDs Facebook App
+                    </div>
+
+                    <div>
+                        <a href="http://mycollegestat.com">myCollegeSTAT</a>
+                    </div>
                 </div>
 
                 <div class="span10 page hidden-page" id="papers-page">
