Update projects page and links

--- a/charlesnaut/templates/pages/home2.html
+++ b/charlesnaut/templates/pages/home2.html
@@ -34,7 +34,7 @@
                     <div class="menu-item" onclick="transitionPage('papers-page')">Papers</div>
                     <div class="menu-item"><a href="http://twitter.com/cnaut" target="_blank">Twitter</a></div>
                     <div class="menu-item"><a href="http://charlesnaut.com" target="_blank">Blog</a></div>
-                    <div class="menu-item">Linkedin</div>
+                    <div class="menu-item"><a href="http://www.linkedin.com/in/charlesnaut" target="_blank">Linkedin</a></div>
                 </div>
                 <div class="span10 page current-page" id="main">
                     <p id="main-intro">Hey! I'm a recent Stanford CS grad working as a Program Manager for Microsoft's Bing search engine.</p> 
@@ -44,39 +44,36 @@
                 </div>
 
                 <div class="span10 page hidden-page" id="project-page">
-                    <p>These are my projects</p>
+                    <p>Some projects I've worked on</p>
 
                     <div>
-                        <a href="http://considerateapp.com">Considerate App</a>
+                        <a href="http://considerateapp.com" target="_blank">Considerate App</a>
                     </div>
 
                     <div>
-                        <a href="http://ksoundsgood.com">k. sounds good.</a>
+                        <a href="http://ksoundsgood.com" target="_blank">k. sounds good.</a>
                     </div>
 
                     <div>
-                        Ideas for a better internet: Moby Dick Project
+                        <a href="http://emarschner.github.com/mobydick-newsscroll/">i4bi: Moby Dick Project</a>
                     </div>
 
                     <div>
-                        <a href="http://dodgebook.com">dodgebook</a>
+                        <a href="http://dodgebook.com" target="_blank">dodgebook</a>
                     </div>
 
                     <div>
-                        Instant Input
+                        <a href="http://www.youtube.com/watch?v=buxgbjT1tlI" target="_blank">Instant Input</a>
                     </div>
 
-                    <div>
-                        Face AIDs Facebook App
-                    </div>
 
                     <div>
-                        <a href="http://mycollegestat.com">myCollegeSTAT</a>
+                        <a href="http://mycollegestat.com" target="_blank">myCollegeSTAT</a>
                     </div>
                 </div>
 
                 <div class="span10 page hidden-page" id="papers-page">
-                    <p>These are my papers</p>
+                    <p>Some papers I've written</p>
                 </div>
             </div>
         </div>
