--- a/charlesnaut/pages/static/css/main2.css
+++ b/charlesnaut/pages/static/css/main2.css
@@ -48,3 +48,11 @@ p#main-intro {
 div.hidden-page {
     display: none !important;
 }
+
+#project-page p {
+    padding-bottom: 5px;
+}
+
+#project-page div {
+    font-size: 37px;
+}
