--- a/charlesnaut/templates/pages/projects.html
+++ b/charlesnaut/templates/pages/projects.html
@@ -1,3 +1,8 @@
+{% extends 'base.html' %}
+
+{% block page-title %}Projects{% endblock %}
+
+{% block content %}
 <div>
     <a href="http://considerateapp.com">Considerate App</a>
 </div>
@@ -25,3 +30,4 @@
 <div>
     <a href="http://mycollegestat.com">myCollegeSTAT</a>
 </div>
+{% endblock %}
