Add slide share presentations

--- a/charlesnaut/templates/pages/home3.html
+++ b/charlesnaut/templates/pages/home3.html
@@ -30,11 +30,11 @@
                 <div class="span2" id="side-bar">
                     <div class="menu-item"><a href="#main">Home</a></div>
                     <div class="menu-item"><a href="#projects">Projects</a></div>
-                    <div class="menu-item"><a href="/resume" target="_blank">Resume</a></div>
                     <div class="menu-item"><a href="#papers">Papers</div>
-                    <div class="menu-item"><a href="http://twitter.com/cnaut" target="_blank">Twitter</a></div>
-                    <div class="menu-item"><a href="http://charlesnaut.com" target="_blank">Blog</a></div>
-                    <div class="menu-item"><a href="http://www.linkedin.com/in/charlesnaut" target="_blank">Linkedin</a></div>
+                    <div class="menu-item"><a href="#slides">Slides</div>
+                    <div class="menu-item"><a href="http://twitter.com/cnaut">Twitter</a></div>
+                    <div class="menu-item"><a href="http://charlesnaut.com">Blog</a></div>
+                    <div class="menu-item"><a href="http://www.linkedin.com/in/charlesnaut">Linkedin</a></div>
                 </div>
 
                 <div class="span10">
@@ -76,6 +76,30 @@
 
                     <div class="page" id="papers">
                         <p>Some papers I've written</p>
+                        <div>blah</div>
+                        <div>blah</div>
+                        <div>blah</div>
+                        <div>blah</div>
+                        <div>blah</div>
+                        <div>blah</div>
+                        <div>blah</div>
+                        <div>blah</div>
+                        <div>blah</div>
+                    </div>
+                    
+                    <div class="page" id="slides">
+                        <p>Some presentations I've given</p>
+                    
+                        <div>
+                            <object style="margin:0px" width="575" height="410">
+                                <param name="movie" value="http://static.slidesharecdn.com/swf/multiwidget.swf"/>
+                                <param name="allowFullScreen" value="true"/>
+                                <param name="allowScriptAccess" value="always"/>
+                                <param name="flashVars" value="feedurl=user/cnaut&widgettitle=%20Playlist%20%3A%20My%20Uploads"/>
+                                <embed src="http://static.slidesharecdn.com/swf/multiwidget.swf" flashVars="feedurl=user/cnaut&widgettitle=%20Playlist%20%3A%20My%20Uploads" type="application/x-shockwave-flash" allowscriptaccess="always" allowfullscreen="true" width="575" height="410">
+                                </embed>
+                            </object>
+                        </div>
                     </div>
                 </div>
             </div>
