--- a/charlesnaut/pages/static/css/main2.css
+++ b/charlesnaut/pages/static/css/main2.css
@@ -53,11 +53,21 @@
 }
 
 .menu-item:hover a {
+    background-color: black;
     color: white;
 }
 .menu-item a:hover {
+    background-color: black !important;
     color: white;
     text-decoration: none;
+}
+
+.side-nav .active {
+    background-color: black;
+}
+
+.side-nav .active a {
+    color: white;
 }
 
 .page {
