--- a/charlesnaut/templates/pages/home3.html
+++ b/charlesnaut/templates/pages/home3.html
@@ -14,6 +14,18 @@
         <script src="{% get_static_prefix %}js/jquery-1.8.3.min.js" type="text/javascript"></script>
         <script src="{% get_static_prefix %}js/bootstrap.min.js" type="text/javascript"></script>
         <script src="{% get_static_prefix %}js/main.js" type="text/javascript"></script>
+
+        <script type="text/javascript">
+            var _gaq = _gaq || [];
+            _gaq.push(['_setAccount', 'UA-9093589-1']);
+            _gaq.push(['_trackPageview']);
+
+            (function() {
+                var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+                ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+                var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+            })();
+        </script>
     </head>
 
     <body data-spy="scroll" data-target=".side-bar">
