Improve banner design

--- a/charlesnaut/templates/pages/home3.html
+++ b/charlesnaut/templates/pages/home3.html
@@ -31,7 +31,7 @@
     <body data-spy="scroll" data-target=".side-bar">
         <div id="banner" class="span12">
             <div id="info-pane">
-                <h1 id="banner-name">Charles Naut</h1>
+                <h1 id="banner-name"><a href="http://charlesnaut.com">Charles Naut</a></h1>
             </div>
        </div>
     
@@ -82,12 +82,12 @@
 
 
                         <div>
-                        <a href="http://mycollegestat.com" target="_blank">myCollegeSTAT</a>
+                            <a href="http://mycollegestat.com" target="_blank">myCollegeSTAT</a>
                         </div>
                     </div>
 
                     <div class="page" id="slides">
-                        <p>Some presentations I've given</p>
+                        <p>Some presentations I've given!</p>
                     
                         <div>
                             <object style="margin:0px" width="575" height="575">
