Add papers section to site

--- a/charlesnaut/templates/pages/home3.html
+++ b/charlesnaut/templates/pages/home3.html
@@ -42,6 +42,7 @@
                     <ul class="nav side-nav">
                         <li class="menu-item"><a href="#main">About</a></li>
                         <li class="menu-item"><a href="#projects">Projects</a></li>
+                        <li class="menu-item"><a href="#papers">Papers</a></li>
                         <li class="menu-item"><a href="#slides">Slides</a></li>
                         <li class="menu-item"><a href="http://blog.charlesnaut.com">Blog</a></li>
                         <li class="menu-item"><a href="http://twitter.com/cnaut">Twitter</a></li>
@@ -83,6 +84,26 @@
 
                         <div>
                             <a href="http://mycollegestat.com" target="_blank">myCollegeSTAT</a>
+                        </div>
+                    </div>
+
+                    <div class="page" id="papers">
+                        <p>Some papers I've written!</p>
+
+                        <div>
+                            <a href="http://docs.charlesnaut.com/papers/ClassifiyingKivaLoans.pdf" target="_blank">Classifying Kiva Loans Based on Funding Time</a>
+                        </div>
+                        
+                        <div>
+                            <a href="http://docs.charlesnaut.com/papers/TumblrProfitability.pdf" target="_blank">Can Tumblr be Profitable?</a>
+                        </div>
+
+                        <div>
+                            <a href="http://docs.charlesnaut.com/papers/FuturePersonalComputer.pdf" target="_blank">The Future Personal Computer</a>
+                        </div>
+                        
+                        <div>
+                            <a href="http://docs.charlesnaut.com/papers/XNA.pdf" target="_blank">XNA: Creating Creators</a>
                         </div>
                     </div>
 
