Add padding at end of page

--- a/charlesnaut/templates/pages/home3.html
+++ b/charlesnaut/templates/pages/home3.html
@@ -121,6 +121,8 @@
                             </object>
                         </div>
                     </div>
+
+                    <div id="end-padding"></div>
                 </div>
             </div>
         </div>
