--- a/charlesnaut/templates/pages/home3.html
+++ b/charlesnaut/templates/pages/home3.html
@@ -7,7 +7,8 @@
         <link rel="stylesheet" href="{% get_static_prefix %}css/bootstrap-responsive.min.css" type="text/css" />
         <link rel="stylesheet" href="{% get_static_prefix %}css/main2.css" type="text/css" />
         <link rel="stylesheet" href="{% get_static_prefix %}css/bootstrap.min.css" type="text/css" />
-        
+        <link rel="stylesheet" href="{% get_static_prefix %}css/icon.css" type="text/css" />
+
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         <!-- <script src="http://ajax.aspnetcdn.com/ajax/jquery/jquery-1.8.0.min.js" type="text/javascript"></script> --!>
@@ -44,6 +45,7 @@
                         <li class="menu-item"><a href="#projects">Projects</a></li>
                         <li class="menu-item"><a href="#papers">Papers</a></li>
                         <li class="menu-item"><a href="#slides">Slides</a></li>
+                        <li class="menu-item"><a href="#social">Social</a></li>
                         <li class="menu-item"><a href="http://blog.charlesnaut.com">Blog</a></li>
                         <li class="menu-item"><a href="http://twitter.com/cnaut">Twitter</a></li>
                         <li class="menu-item"><a href="http://www.linkedin.com/in/charlesnaut">Linkedin</a></li>
@@ -57,6 +59,7 @@
                         <p class="main-details">My <strong>loves</strong> include my family, my friends, New York, Stanford, baby back ribs, data, sports, video games, and movies.</p>
                         <p class="main-details">My <strong>interests</strong> include programming, business models, artificial intelligence, the developing world, social media, and quantified self.  
                     </div>
+                
 
                     <div class="page" id="projects">
                         <p>Some projects I've worked on!</p>
@@ -121,8 +124,22 @@
                             </object>
                         </div>
                     </div>
+                    
+                    <div class="page" id="social">
+                        <p>Some social networks I'm on!</p>
+                        
+                        <ul class="socialicons color">
+                            <li><a href="http://linkedin.com/in/charlesnaut" class="linkedin" target="_blank">linkedin</a></li>
+                            <li><a href="http://twitter.com/cnaut" class="twitter" target="_blank">twitter</a></li>
+                            <li><a href="http://blog.charlesnaut.com" class="tumblr" target="_blank">tumblr</a></li>
+                            <li><a href="http://quora.com/Charles-Naut" class="quora" target="_blank">quora</a></li>
+                            <li><a href="http://pinterest.com/cnaut" class="pinterest" target="_blank">pinterest</a></li>
+                            <li><a href="http://plus.google.com/109949815088571911819" class="gpluslight" target="_blank">gpluslight</a></li>
+                        </ul>
+                    </div>
 
                     <div id="end-padding"></div>
+                
                 </div>
             </div>
         </div>
