--- a/charlesnaut/templates/pages/home3.html
+++ b/charlesnaut/templates/pages/home3.html
@@ -46,9 +46,6 @@
                         <li class="menu-item"><a href="#papers">Papers</a></li>
                         <li class="menu-item"><a href="#slides">Slides</a></li>
                         <li class="menu-item"><a href="#social">Social</a></li>
-                        <li class="menu-item"><a href="http://blog.charlesnaut.com">Blog</a></li>
-                        <li class="menu-item"><a href="http://twitter.com/cnaut">Twitter</a></li>
-                        <li class="menu-item"><a href="http://www.linkedin.com/in/charlesnaut">Linkedin</a></li>
                     </ul>
                 </div>
 
@@ -57,7 +54,7 @@
                         <p id="main-intro">Hey! I'm a recent Stanford CS grad working as a Program Manager for Microsoft's Bing search engine.</p> 
                         <p class="main-details">My <strong>passions</strong> include technology, social change, and entrepreneurship.</p>
                         <p class="main-details">My <strong>loves</strong> include my family, my friends, New York, Stanford, baby back ribs, data, sports, video games, and movies.</p>
-                        <p class="main-details">My <strong>interests</strong> include programming, business models, artificial intelligence, the developing world, social media, and quantified self.  
+                        <p class="main-details">My <strong>interests</strong> include programming, business models, machine learning, the developing world, social media, and quantified self.  
                     </div>
                 
 
