Update bio and make width of content shorter

--- a/charlesnaut/templates/pages/home3.html
+++ b/charlesnaut/templates/pages/home3.html
@@ -49,11 +49,11 @@
                     </ul>
                 </div>
 
-                <div class="span10">
+                <div class="span9">
                     <div class="page current-page" id="main">
                         <p id="main-intro">Hey! I'm a recent Stanford CS grad working as a Program Manager for Microsoft's Bing search engine.</p> 
                         <p class="main-details">My <strong>passions</strong> include technology, social change, and entrepreneurship.</p>
-                        <p class="main-details">My <strong>loves</strong> include my family, my friends, New York, Stanford, baby back ribs, data, sports, video games, and movies.</p>
+                        <p class="main-details">My <strong>loves</strong> include my family, my friends, New York, Stanford, baby back ribs, data, sports, and video games.</p>
                         <p class="main-details">My <strong>interests</strong> include programming, business models, machine learning, the developing world, social media, and quantified self.  
                     </div>
                 
